# ros-rescue-mirror

./: .gitignore  .gitmodules  README.md
arbie_bringup/: CMakeLists.txt  package.xml
arbie_bringup/config/: controllers.yaml  controllers_arm.yaml  controllers_base.yaml  controllers_common.yaml  controllers_flippers.yaml  controllers_real.yaml  controllers_sim.yaml
arbie_bringup/launch/: arbie.launch  arm.launch  control.launch  hardware.launch  main.launch  manipulation.launch  sim_arm.launch  sim_base.launch  slam.launch  teleop.launch
arbie_control/: CMakeLists.txt  package.xml
arbie_control/config/: controllers.yaml
arbie_control/include/control/: joint_handle_group.h
arbie_control/meshes/: arm_upper_1_m-binary.stl  flipper_front_left_1_m-binary.stl  flipper_rear_right_1_m-binary.stl
arbie_control/src/control/: joint_handle_group.cpp
arbie_control/src/inverse_kinematics/: main.cpp
arbie_control/srv/: GripperCommand.srv
arbie_debug/: CMakeLists.txt  package.xml
arbie_debug/config/: arm_controllers.yaml  test_arm_control.perspective
arbie_debug/launch/: rviz.launch  spawn_model.launch  test_arm_control.launch  view_model.launch
arbie_debug/rviz/: view_model.rviz
arbie_debug/src/localisation_placeholder/: main.cpp
arbie_description/: CMakeLists.txt  package.xml
arbie_description/config/: controllers.yaml
arbie_description/launch/: control.launch  main.launch
arbie_description/meshes/: Flipper_RR_1_m-binary.stl  Tracks_L_1_m-binary.stl  arm_base.stl  arm_lower.stl  arm_upper.stl  base_link_m-binary.stl  camera_d435.stl  camera_mount.stl  camera_mount_leg_1.stl  camera_mount_leg_2.stl  camera_t265.stl  equivalent_wheel_L_1_m-binary.stl  flipper_front_left.stl  flipper_front_right.stl  flipper_rear_left.stl  gripper_left_contact.stl  gripper_left_driver.stl  gripper_left_linkage.stl  gripper_mount_1_m-binary.stl  gripper_right_contact.stl  gripper_right_driver.stl  gripper_right_linkage.stl  pitch_mount_1_m-binary.stl  tracks_right.stl  tracks_right_wheel.stl  wrist_base_1_m-binary.stl  wrist_yaw.stl
arbie_description/meshes_old/: flipper_front_right_1_m-binary.stl
arbie_description/model/: arbie.sdf  arbie.urdf  arbie.urdf.xacro  arbie_arm_sim.urdf.xacro  arbie_base_sim.urdf.xacro  arbie_original.urdf  arbie_real.urdf.xacro  arbie_sim.urdf.xacro  arbie_sim_arm.urdf.xacro  arbie_sim_base.urdf.xacro  materials.urdf  real.urdf.xacro  sim.urdf.xacro  sim_base.urdf.xacro  simple_base.urdf
arbie_description/model/components/: arm.urdf  arm.urdf.xacro  base.urdf  base.urdf.xacro  cameras.urdf  flippers.urdf  flippers.urdf.xacro  tracks_real.urdf  tracks_sim.urdf  (+1 more)
arbie_description/rviz/: rescue.rviz
arbie_description/temp/: arbie_temp.urdf  get_urdf.sh
arbie_gamepad/: CMakeLists.txt  package.xml
arbie_gamepad/include/: command_publisher.h
arbie_gamepad/launch/: main.launch
arbie_gamepad/src/: command_publisher.cpp  main.cpp
arbie_gazebo/: CMakeLists.txt  package.xml
arbie_gazebo/config/: gazebo_control_gains.yaml
arbie_gazebo/launch/: default_arbie.launch  gzserver_arm.launch  gzserver_base.launch  main.launch  manipulation.launch  navigation.launch  sim_arm.launch  sim_base.launch  sim_hardware_arm.launch  sim_hardware_base.launch
arbie_gazebo/worlds/: manipulation.world  navigation.world
arbie_hardware/: CMakeLists.txt  package.xml  setup.py
arbie_hardware/config/: dynamixel_wrist.yaml
arbie_hardware/launch/: hardware.launch  main.launch  pcb.launch
arbie_hardware/nodes/: arm  odrives  spawner  wrist
arbie_hardware/srv/: WriteHardware.srv
arbie_manipulation/: CMakeLists.txt  package.xml
arbie_manipulation/include/: kinematics_handler.h
arbie_manipulation/launch/: manipulation.launch
arbie_manipulation/src/: kinematics_handler.cpp  main.cpp
arbie_model/: CMakeLists.txt  package.xml
arbie_model/launch/: control.launch
arbie_model/meshes/: arm_base_1_m-binary.stl  wrist_yaw_1_m-binary.stl
arbie_msgs/: CMakeLists.txt  package.xml
arbie_msgs/msg/: GripperVelocity.msg  HardwareStatus.msg  ManipulationStatus.msg  NavigationStatus.msg  TeleopStatus.msg
arbie_msgs/srv/: NavigationCommand.srv  ReadHardware.srv  WriteHardware.srv
arbie_navigation/: CMakeLists.txt  package.xml
arbie_navigation/config/: base_local_planner_params.yaml  controllers.yaml  costmap_common_params.yaml  costmap_local_params.yaml  rqt_control.perspective
arbie_navigation/include/: command_processor.h
arbie_navigation/launch/: move_base.launch  navigation.launch
arbie_navigation/src/: command_processor.cpp  joystick_listener.cpp  set_goal.cpp
arbie_teleop/: CMakeLists.txt  package.xml
arbie_teleop/include/: command_publisher.h  joystick_listener.h
arbie_teleop/launch/: teleop.launch
arbie_teleop/src/: command_publisher.cpp  main.cpp
arbie_test/: CMakeLists.txt  package.xml
arbie_test/config/: base.rviz  gazebo_control_gains.yaml  test_arm_control.perspective  test_cameras.rviz  view_base.rviz  view_model.rviz
arbie_test/launch/: arm.launch  cameras.launch  real_arm.launch  sim_arm.launch  sim_base.launch  sim_base_slam.launch  spawn_simple_base.launch  test_base_control.launch  test_cameras.launch  test_moveit.launch  test_moveit_sim.launch  view_base.launch  view_camera_streams.launch  view_model.launch
arbie_webgui/: CMakeLists.txt  package.xml
arbie_webgui/launch/: webgui.launch
arbie_webgui/www/: index.css  index.html  index.js  index.scss  style.css.map
exp_description/: CMakeLists.txt  package.xml
exp_description/model/: simple.urdf
gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
gui/launch/: gui.launch
gui/scripts/: gui
test_dynamixel/: CMakeLists.txt  README.md  package.xml
test_dynamixel/config/: controllers.yaml  dynamixel_arm.yaml  dynamixel_info.yaml  dynamixel_info_vel.yaml  dynamixel_wrist.yaml  service_call.perspective
test_dynamixel/include/: dynamixel_controller.h
test_dynamixel/launch/: control.launch  control_vel.launch  hardware.launch  main.launch
test_dynamixel/model/: placeholder.urdf
test_dynamixel/src/: main.cpp  wrist_tilt.cpp  wrist_tilt_velocity.cpp
(+375 files in other folders)
