<?xml version="1.0"?>
<package format="2">
    <name>arbie_description</name>
    <version>0.0.0</version>
    <description>The arbie_description package</description>
    <maintainer email="zachalambert@gmail.com">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <export>
        <!-- Required for gazebo to access meshes -->
        <gazebo_ros
            gazebo_plugin_path="${prefix}/lib"
            gazebo_model_path="${prefix}/.."
        />
    </export>
</package>
