<?xml version="1.0"?>
<package format="2">
    <name>arbie_description</name>
    <version>0.0.0</version>
    <description>The arbie_description package</description>
    <maintainer email="zachalambert@gmail.com">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ros_controllers</exec_depend>

    <!-- Required for gazebo to access meshes -->
    <export>
        <gazebo_ros
            gazebo_plugin_path="${prefix}/lib"
            gazebo_model_path="${prefix}/.."
        />
    </export>
</package>
