<?xml version="1.0"?>
<package format="2">
  <name>arbie_gazebo</name>
  <version>0.0.0</version>
  <description>The rescue_gazebo package</description>
  <maintainer email="zach@todo.todo">zach</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <!-- Required for gazebo to use the world models -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
