<?xml version="1.0"?>
<package format="2">
    <name>arbie_hardware</name>
    <version>0.0.0</version>
    <description>The arbie_hardware package</description>
    <maintainer email="zach@todo.todo">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>arbie_msgs</build_depend>
    <build_depend>controller_manager</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>arbie_msgs</build_export_depend>
    <build_export_depend>controller_manager</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>arbie_msgs</exec_depend>
    <exec_depend>controller_manager</exec_depend>
</package>
