<?xml version="1.0"?>
<package format="2">
    <name>arbie_hardware</name>
    <version>0.0.0</version>
    <description>The arbie_hardware package</description>
    <maintainer email="zach@todo.todo">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>dynamixel_sdk</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>arbie_msgs</depend>
    <depend>controller_manager</depend>
</package>
