<?xml version="1.0"?>
<package format="2">
  <name>arbie_manipulation</name>
  <version>0.0.0</version>
  <description>The arbie_manipulation package</description>
  <maintainer email="zachalambert@gmail.com">zach</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>arbie_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_conversions</depend>

</package>
