<?xml version="1.0"?>
<package format="2">
    <name>arbie_control</name>
    <version>0.0.0</version>
    <description>The rescue_control package</description>

    <maintainer email="zachalambert@gmail.com">zach</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>rescue_hardware</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>moveit_core</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>moveit_ros_planning</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_eigen</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>rescue_hardware</exec_depend>

</package>
