<?xml version="1.0"?>
<package format="2">
    <name>arbie_model</name>
    <version>0.0.0</version>
    <description>The rescue_control package</description>
    <maintainer email="zachalambert@gmail.com">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
