<?xml version="1.0"?>
<package format="2">
  <name>arbie_msgs</name>
  <version>0.0.0</version>
  <description>The arbie_msgs package</description>
  <maintainer email="zach@todo.todo">zach</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
