<?xml version="1.0"?>
<package format="2">
  <name>arbie_teleop</name>
  <version>0.0.0</version>
  <description>The arbie_teleop package</description>
  <maintainer email="zach@todo.todo">zach</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>arbie_msgs</depend>

</package>
