<?xml version="1.0"?>
<package format="2">
    <name>arbie_test</name>
    <version>0.0.0</version>
    <description>The arbie_test package</description>
    <maintainer email="zach@todo.todo">zach</maintainer>
    <license>TODO</license>

    <exec_depend>rviz</exec_depend>
    <exec_depend>rqt_graph</exec_depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>
