<?xml version="1.0"?>
<package format="2">
    <name>arbie_webgui</name>
    <version>0.0.0</version>
    <description>The webgui package</description>
    <maintainer email="richard@todo.todo">richard</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>roswww</exec_depend>
    <exec_depend>rosbridge_server</exec_depend>
    <exec_depend>tf2_web_republisher</exec_depend>
</package>
