<?xml version="1.0"?>
<package format="2">
    <name>exp_description</name>
    <version>0.0.0</version>
    <description>The exp_description package</description>
    <maintainer email="zachalambert@gmail.com">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
