<?xml version="1.0"?>
<package format="2">
    <name>test_dynamixel</name>
    <version>0.0.0</version>
    <description>The test_dynamixel package</description>

    <maintainer email="zach@todo.todo">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>dynamixel_sdk</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_export_depend>dynamixel_sdk</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <exec_depend>dynamixel_workbench_sdk</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
</package>
